# cemrg_plugin_generator

./: README.md  pyproject.toml
MyPlugin/: CMakeLists.txt  files.cmake  manifest_headers.cmake  plugin.xml
MyPlugin/documentation/UserManual/: Manual.dox
MyPlugin/documentation/doxygen/: modules.dox
MyPlugin/src/internal/: MyViewView.cpp  MyViewView.h  MyViewViewControls.ui  kcl_cemrgapp_myplugin_Activator.cpp  kcl_cemrgapp_myplugin_Activator.h
cemrg_plugin_generator/: Constants.py  PluginGenerator.py
cemrg_plugin_generator/templates/: LICENSE
scripts/: plugin_generator.py
tests/: copy_test.py
